tests/Fixtures/Torture/Bad/unsafe_required_addrof.g
// EXPECT G033
kernel { entry func Main() { let int x = 5; let int* p = &x; } }
